--- a/movies-advisor/src/app/app.component.html
+++ b/movies-advisor/src/app/app.component.html
@@ -1,10 +1,19 @@
 
-<ul class="list-group">
-  <li 
-      *ngFor="let movie of popularMovies.results"
-      class="list-group-item">
-      {{ movie.original_title }}
-  </li>
-</ul>
-
-<app-movie-card></app-movie-card>
+<h1>Bonjour Richard !</h1>
+<h2>Voici les films les plus populaires en ce moment</h2>
+<!-- From https://material.angular.io/components/card/examples -->
+<mat-card class="example-card" *ngFor="let movie of popularMovies.results">
+    <mat-card-header>
+      <mat-card-title>{{ movie.title }}</mat-card-title>
+      <mat-card-subtitle>Date de sortie: {{ movie.release_date }}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        {{ movie.overview }}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>CONSULTER</button>
+    </mat-card-actions>
+  </mat-card>
+<!-- <app-movie-card></app-movie-card> -->
