--- a/movies-advisor/src/app/app.component.html
+++ b/movies-advisor/src/app/app.component.html
@@ -5,7 +5,8 @@
 <mat-card class="example-card" *ngFor="let movie of popularMovies.results">
     <mat-card-header>
       <mat-card-title>{{ movie.title }}</mat-card-title>
-      <mat-card-subtitle>Date de sortie: {{ movie.release_date }}</mat-card-subtitle>
+      <mat-card-subtitle>Date de sortie: {{ movie.release_date | date: 'dd/MM/yyyy'}}</mat-card-subtitle>
+      <mat-card-subtitle>Note du public: {{ movie.vote_average }}/10</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
       <p>
@@ -16,4 +17,4 @@
       <button mat-button>CONSULTER</button>
     </mat-card-actions>
   </mat-card>
-<!-- <app-movie-card></app-movie-card> -->
+<app-movie-card [movie]="title" *ngFor="let movie of popularMovies.results"></app-movie-card>
