--- a/movies-advisor/src/app/movie-card/movie-card.component.html
+++ b/movies-advisor/src/app/movie-card/movie-card.component.html
@@ -1,7 +1,4 @@
 <p>movie-card works!</p>
-<h2>{{ title }}</h2>
-<p>Mis en ligne le {{ createdDate }}</p>
-<p>{{ description }}</p>
-<p> {{ snaps }}</p>
-<mat-card>Movie card</mat-card>
-<mat-card *ngFor="let movie of popularMoviesList">{{ movie }}</mat-card>
+<p>
+    Today's item: {{movie}}
+</p>
