--- a/movies-advisor/src/app/app.component.html
+++ b/movies-advisor/src/app/app.component.html
@@ -1,20 +1,4 @@
 
 <h1>Bonjour Richard !</h1>
-<h2>Voici les films les plus populaires en ce moment</h2>
-<!-- From https://material.angular.io/components/card/examples -->
-<mat-card class="example-card" *ngFor="let movie of popularMovies.results">
-    <mat-card-header>
-      <mat-card-title>{{ movie.title }}</mat-card-title>
-      <mat-card-subtitle>Date de sortie: {{ movie.release_date | date: 'dd/MM/yyyy'}}</mat-card-subtitle>
-      <mat-card-subtitle>Note du public: {{ movie.vote_average }}/10</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <p>
-        {{ movie.overview }}
-      </p>
-    </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>CONSULTER</button>
-    </mat-card-actions>
-  </mat-card>
-<app-movie-card [movie]="title" *ngFor="let movie of popularMovies.results"></app-movie-card>
+<h2>Voici les films les plus populaires du moment</h2>
+<app-movie-card [movie]="movie" *ngFor="let movie of popularMovies.results"></app-movie-card>
