--- a/movies-advisor/src/app/movie-card/movie-card.component.html
+++ b/movies-advisor/src/app/movie-card/movie-card.component.html
@@ -1,4 +1,16 @@
-<p>movie-card works!</p>
-<p>
-    Today's item: {{movie}}
-</p>
+<mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>{{ movie.title }}</mat-card-title>
+      <mat-card-subtitle>Date de sortie: {{ movie.release_date | date: 'dd/MM/yyyy'}}</mat-card-subtitle>
+      <mat-card-subtitle>Note du public: {{ movie.vote_average }}/10</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      <p>
+        {{ movie.overview }}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
+      <button mat-button>CONSULTER</button>
+    </mat-card-actions>
+</mat-card>
+<p>{{reviews.results[0].content}}</p>
