--- a/movies-advisor/src/app/movie-card/movie-card.component.html
+++ b/movies-advisor/src/app/movie-card/movie-card.component.html
@@ -4,13 +4,24 @@
       <mat-card-subtitle>Date de sortie: {{ movie.release_date | date: 'dd/MM/yyyy'}}</mat-card-subtitle>
       <mat-card-subtitle>Note du public: {{ movie.vote_average }}/10</mat-card-subtitle>
     </mat-card-header>
+    <img mat-card-image src={{url_image}} alt="Photo of the movie">
     <mat-card-content>
       <p>
         {{ movie.overview }}
       </p>
     </mat-card-content>
-    <mat-card-actions>
-      <button mat-button>CONSULTER</button>
-    </mat-card-actions>
 </mat-card>
-<p>{{reviews.results[0].content}}</p>
+<mat-card class="example-card" *ngIf= "reviews.results.length > 0">
+  <mat-card-content>
+    <p>
+      {{reviews.results[0].content}}
+    </p>
+  </mat-card-content>
+</mat-card>
+<mat-card class="example-card" *ngIf= "reviews.results.length == 0">
+  <mat-card-content>
+    <p>
+      Ce film n'a pas encore reçu d'avis.
+    </p>
+  </mat-card-content>
+</mat-card>
