--- a/movies-advisor/src/app/app.component.html
+++ b/movies-advisor/src/app/app.component.html
@@ -1,4 +1,6 @@
-
-<h1>Bonjour Richard !</h1>
-<h2>Voici les films les plus populaires du moment</h2>
-<app-movie-card [movie]="movie" *ngFor="let movie of popularMovies.results"></app-movie-card>
+<main>
+    <h1>Bonjour Richard !</h1>
+    <h2>Voici les films les plus populaires du moment</h2>
+    <app-movie-card [movie]="movie" *ngFor="let movie of popularMovies.results">
+    </app-movie-card>
+</main>
