--- a/movies-advisor/src/app/movie-card/movie-card.component.css
+++ b/movies-advisor/src/app/movie-card/movie-card.component.css
@@ -1,8 +1,14 @@
 .example-card {
-    max-width: 400px;
+    width: 400px;
   }
-  
-  .example-header-image {
-    background-image: url('https://material.angular.io/assets/img/examples/shiba1.jpg');
-    background-size: cover;
-  }
+
+main{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+mat-card{
+  margin-right: 50px;
+  margin-top: 30px;
+}
