changement de langue des avis de spectateurs

--- a/movies-advisor/src/app/app.component.html
+++ b/movies-advisor/src/app/app.component.html
@@ -11,6 +11,6 @@
         </mat-form-field>
     </div>
     
-    <app-movie-card [movie]="movie" *ngFor="let movie of popularMovies.results">
+    <app-movie-card [movie]="movie" [language]= "langue" *ngFor="let movie of popularMovies.results">
     </app-movie-card>
 </main>
